# book_algorithm_solutions

./: Cargo.toml  README.md
src/chapter-2/: 4.rs
src/chapter-3/: 6.rs  sol-3-2.rs  sol-3-3.rs  sol-3-4.rs  sol-3-5.rs  sol-3-6.rs  sol-3-7.rs
src/chapter-4/: pra-4-2.rs  pra-4-4.rs  pra-4-5.rs
