[package]
name = "book_algorithm_solutions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "*"

[[bin]]
name = "2-4"
path = "src/chapter-2/4.rs"

[[bin]]
name = "3-6"
path = "src/chapter-3/6.rs"