[package]
name = "book_algorithm_solutions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "*"

[[bin]]
name = "2-4"
path = "src/chapter-2/4.rs"

[[bin]]
name = "3-6"
path = "src/chapter-3/6.rs"


[[bin]]
name = "sol-3-2"
path = "src/chapter-3/sol-3-2.rs"

[[bin]]
name = "sol-3-3"
path = "src/chapter-3/sol-3-3.rs"

[[bin]]
name = "sol-3-4"
path = "src/chapter-3/sol-3-4.rs"

[[bin]]
name = "sol-3-5"
path = "src/chapter-3/sol-3-5.rs"

[[bin]]
name = "sol-3-6"
path = "src/chapter-3/sol-3-6.rs"